--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.11.1
+attrs==25.4.0
 coverage==7.10.7
 Django==4.2.28
 djangorestframework==3.16.1
+drf-spectacular==0.29.0
 exceptiongroup==1.3.1
 freezegun==1.5.5
+inflection==0.5.1
 iniconfig==2.1.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 packaging==26.0
 pluggy==1.6.0
 psycopg==3.2.13
@@ -15,7 +20,11 @@ pytest-cov==7.0.0
 pytest-django==4.11.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+PyYAML==6.0.3
+referencing==0.36.2
+rpds-py==0.27.1
 six==1.17.0
 sqlparse==0.5.5
 tomli==2.4.0
 typing_extensions==4.15.0
+uritemplate==4.2.0
