--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = -q --cov=clientes --cov=facturas --cov=operaciones --cov=core --cov-report=term-missing --cov-fail-under=20
+addopts = -q --cov=core --cov=clientes --cov=facturas --cov=operaciones --cov-report=term-missing --cov-fail-under=80
+
