--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ DJANGO_SETTINGS_MODULE=config.settings
 DEBUG=1
 SECRET_KEY=change-me-in-production
 ALLOWED_HOSTS=*
+
+DEFAULT_TASA_DESCUENTO=5.00
